deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx

    spec:
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
          items:
          - key: default.conf
            path: default.conf
      - name: shared-volume
        emptyDir: {}
      - name: my-configmap
        configMap:
          name: my-configmap
      
      nodeSelector:
        kubernetes.io/hostname: worker3
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/
          readOnly: true
        - name: shared-volume
          mountPath: /homework
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - 'test -f /homework/index.html'
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "rm -f /homework/index.html"]
