service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: nginx 
  ports:
  - port: 8000
    targetPort: 8000
